# aula_19

./: Dockerfile  database.py  main.py  models.py  pyproject.toml  schema.py  test.db
